finish section top line

--- a/dev/assets/scss/base/_variables.scss
+++ b/dev/assets/scss/base/_variables.scss
@@ -33,6 +33,14 @@ $tsn_ukraine:								#ffd400;
 $tsn_glamour:								#ba39e6;
 $tsn_money:									#1bb367;
 $tsn_world:									#028fbd;
+$tsn_politics:							#30b3bf;
+$tsn_video:									#3640b3;
+$tsn_editions:							#d91616;
+$tsn_blogs:									#cca266;
+$tsn_sport:									#73cc33;
+$tsn_ladies:								#f2b6f2;
+$tsn_interesting:						#f26522;
+$tsn_special:								#f2b600;
 
 
 
