--- a/dev/src/components/header/header__top-line/header__top-line.pug
+++ b/dev/src/components/header/header__top-line/header__top-line.pug
@@ -1,8 +1,8 @@
-include ../mixins.pug
+include ../../mixins.pug
 .header__top-shadow
 	.header__top-line.grid-x.align-justify
 		.top-line__left.grid-x.align-middle
-			a(href='#').top-line__logo
+			a(href='#').top-line__logo.flex-container.align-middle.align-center
 				svg( 
 					xmlns="https://www.w3.org/2000/svg" 
 					width="50" 
