--- a/dev/src/index.pug
+++ b/dev/src/index.pug
@@ -5,5 +5,5 @@ html.no-js(lang="en" dir="ltr")
 	body
 		.body-wrapper
 			include ./components/header/header.pug
-
+			include ./components/section/section.pug
 			include ./components/head/bottom.pug
