--- a/dev/src/components/header/header.pug
+++ b/dev/src/components/header/header.pug
@@ -1,4 +1,4 @@
 header
 	.header__content
-		include ../header__top-line/header__top-line.pug
-		include ../header__main-content/header__main-content.pug
+		include ./header__top-line/header__top-line.pug
+		include ./header__main-content/header__main-content.pug
