finish section news

--- a/dev/src/components/section/section__news/section__news.pug
+++ b/dev/src/components/section/section__news/section__news.pug
@@ -5,5 +5,11 @@ section.section.section__news
 		span.filter__value Головні новини
 		span.filter__value Популярні
 		span.filter__value Коментують
-
+	.news__content.grid-x.grid-margin-x.align-spaced
+		+news-content('1.jpg', 'У столиці Афганістану стався потужний вибух - понад 90 людей поранені, є загиблі', 'world', 2017-05-28, '28 травня, 2017', '08:51', 31, 3015)
+		+news-content('2.jpg', 'В уряді назвали п\'ять областей України з найгіршими дорогами', 'ukraine', 2017-05-28, '28 травня, 2017', '07:23', 2, 1025)
+		+news-content('3.jpg', 'Зіркові гості куми Порошенка. Хто вітав Білозір із днем народження', 'glamour', 2017-05-27, '27 травня, 2017', '22:18', 8, 2005)
+		+news-content('4.jpg', 'НБУ оголосив про зняття трьох адміністративних обмежень на валютному ринку', 'money', 2017-05-28, '28 травня, 2017', '08:51', 31, 3015)
+		+news-content('5.jpg', 'Флінн погодився передати до Сенату документи в рамках розслідування щодо втручання РФ у вибори ...', 'world', 2017-05-27, '27 травня, 2017', '22:18', 8, 2005)
+		+news-content('6.jpg', 'Жодних доказів застосування Асадом хімічної зброї немає — Путін', 'world', 2017-05-28, '27 травня, 2017', '21:45', 31, 3015)
 
