--- a/dev/src/index.scss
+++ b/dev/src/index.scss
@@ -23,6 +23,12 @@ body{
 	&-padding{
 		padding: 0 !important;
 	}
+	&-pb{
+		padding-bottom: 0 !important;
+	}
+	&-pl{
+		padding-left: 0 !important;
+	}
 }
 .tsn{
 	&__default{
