--- a/dev/src/components/section/section.scss
+++ b/dev/src/components/section/section.scss
@@ -5,6 +5,23 @@
 .section{
 	padding: 0 450px 0 50px;
 	color: $primary_color;
+	&__gallery{
+		background-color: $black_color;
+	}
+	&__banner{
+		width: 728px;
+		height: 90px;
+		display: block;
+		margin: 20px auto;
+	}
+}
+.banner{
+	&__img{
+		height: 100%;
+		width: 100%;
+		object-fit: cover;
+		border-radius: 4px;
+	}
 }
 #hamburger {
 	display: inline-block;
